Overrides and full market

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,1 @@
-<a href="/start/" style="color:white;">The Alpha's Guide to the Galaxy</a>
+<a href="/start/" style="color:white;">Путеводитель aльфа-клонов по Новому Эдему</a>
