--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -4,6 +4,17 @@
   }
 }
 
+h1 {
+    font-family: "Georgia", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+  }
+  
+body {
+    font-family: "Georgia", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+  }
+
+#chapter h3 { font-family: "Tahoma", "Arial", sans-serif;
+  }
+
 kbd {
   padding: 1px 5px;
   border: 2px outset #cb9;
@@ -19,3 +30,4 @@ video {
   margin: 0 auto;
   display: block;
 }
+
